tests/paczka2/big_fuzzy/17435223.err
Error in line 3: 6vybl S756 5,9
Error in line 8: J2tiF3D4 A811 67,23
Error in line 7: 6vybl A331 70,1
Error in line 14: 6vybl S756 55,9
Error in line 13: Cru757frP0X S756 70,2
Error in line 16: 6vybl A331 67,6
Error in line 31: Cru757frP0X A331 62,8
Error in line 34: Cru757frP0X A811 10,5
Error in line 54: A331 A811 83,6
Error in line 56: 6vybl A261 49,9
Error in line 57: 6vybl A331 24,8
Error in line 73: 8ZrT A331 66,0
Error in line 64: 6vybl A331 67,9
Error in line 65: Cru757frP0X S756 59,1
Error in line 80: J2tiF3D4 A331 94,1
Error in line 93: 6vybl A331 6,1
Error in line 92: Cru757frP0X S756 95,9
Error in line 95: 6vybl A811 29,2
Error in line 100: J2tiF3D4 A811 52,7
Error in line 105: J2tiF3D4 A811 79,8
Error in line 108: J2tiF3D4 S756 24,7
Error in line 117: 8ZrT A811 53,3
Error in line 119: 8ZrT S756 327,9
Error in line 107: QngRgtw A811 34,7
Error in line 148: QngRgtw A811 g8,9
Error in line 157: MSaD8jQlO S756 88,3
Error in line 165: Cru757frP0X A811 105,81
Error in line 164: 6vybl S756 28,0
Error in line 159: MSaD8jQlO A331 9,7
Error in line 163: 8ZrT A811 58,6
Error in line 167: MSaD8jQlO S756 86,9
Error in line 173: MSaD8jQlO A261 81,8
Error in line 160: J2tiF3D4 A331 8,6
Error in line 180: J2tiF3D4 S756 21,5
Error in line 161: Cru757frP0X A811 41,2
Error in line 168: QngRgtw A811 1,4
Error in line 201: 8ZrT A261 47,3
Error in line 199: MSaD8jQlO S756 64,7
Error in line 209: 331 261 35,1
Error in line 208: A331 A811 189,8
Error in line 220: A331 S756 04,0
Error in line 222: Cru757frP0X A261 72,3
Error in line 219: A331 S756 63,3
Error in line 227: QngRgtw A811 14,3
Error in line 231: A331 A261 35,0
Error in line 246: 6vybl S756 59,7
